[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "twtvt"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
[[tool.poetry.packages]]
include = "twtvt"

[tool.poetry.scripts]
twtvt = "twtvt:main"

[tool.pyright]
typeCheckingMode = "strict"
pythonPlatform = "All"
venvPath = "./.venv"
stubPath = "./.type_stubs"
include = ["./*"]
exclude = ["**/node_modules", "**/__pycache__"]
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
pythonVersion = "3.9"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 2
split_before_logical_operator = true
column_limit = 119
allow_split_before_dict_value = false

[tool.ruff]
line-length = 119
select = ["PLE", "PLW", "E", "W", "F", "I", "Q"]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.4.0"
playwright = "^1.32.1"
beautifulsoup4 = "^4.12.2"
httpx = "^0.24.0"
typer = "^0.7.0"
rich = "^13.3.4"
yt-dlp = "^2023.3.4"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "single"
multiline-quotes = "single"

[tool.pytest.ini_options]
addopts = ["--cov=twtvt"]

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
types-toml = "^0.10.8.5"
yapf = "^0.32.0"
ruff = "^0.0.261"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.7"
invoke = "^2.0.0"
types-invoke = "^1.7.3.16"
pyright = "^1.1.302"
